--- a/app/src/main/res/layout/activity_club_review_write.xml
+++ b/app/src/main/res/layout/activity_club_review_write.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
                 name="vm"
-                type="com.icoo.ssgsag_android.ui.main.review.club.write.ClubReviewWriteViewModel" />
+                type="com.icoo.ssgsag_android.ui.main.review.club.write.ReviewWriteViewModel" />
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
