--- a/app/src/main/res/layout/fragment_review_write_score.xml
+++ b/app/src/main/res/layout/fragment_review_write_score.xml
@@ -143,7 +143,7 @@
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Q1. 동아리 활동이 얼마나 재미있었나요?"
+                            android:text="@{vm.questions[0]}"
                             android:fontFamily="@font/noto_sans_kr_medium"
                             android:textSize="14sp"
                             android:textColor="@color/black_1"/>
@@ -166,7 +166,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="개노잼"
+                                android:text="@{vm.rateLabels[0][0]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -175,7 +175,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="노잼"
+                                android:text="@{vm.rateLabels[0][1]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -184,7 +184,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="보통"
+                                android:text="@{vm.rateLabels[0][2]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -193,7 +193,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="꿀잼"
+                                android:text="@{vm.rateLabels[0][3]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -202,7 +202,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="개꿀잼"
+                                android:text="@{vm.rateLabels[0][4]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -219,7 +219,7 @@
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Q2. 모임 주제에 대해 전문성이 있나요?"
+                            android:text="@{vm.questions[1]}"
                             android:fontFamily="@font/noto_sans_kr_medium"
                             android:textSize="14sp"
                             android:textColor="@color/black_1"/>
@@ -242,7 +242,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="매우 낮음"
+                                android:text="@{vm.rateLabels[1][0]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -251,7 +251,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="낮음"
+                                android:text="@{vm.rateLabels[1][1]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -260,7 +260,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="보통"
+                                android:text="@{vm.rateLabels[1][2]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -269,7 +269,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="높음"
+                                android:text="@{vm.rateLabels[1][3]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -278,7 +278,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="최고에요"
+                                android:text="@{vm.rateLabels[1][4]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -295,7 +295,7 @@
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Q3. 동아리 활동 강도가 얼마나 빡센가요?"
+                            android:text="@{vm.questions[2]}"
                             android:fontFamily="@font/noto_sans_kr_medium"
                             android:textSize="14sp"
                             android:textColor="@color/black_1"/>
@@ -318,7 +318,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="개빡셈"
+                                android:text="@{vm.rateLabels[2][0]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -327,7 +327,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="빡셈"
+                                android:text="@{vm.rateLabels[2][1]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -336,7 +336,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="보통"
+                                android:text="@{vm.rateLabels[2][2]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -345,7 +345,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="안빡셈"
+                                android:text="@{vm.rateLabels[2][3]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -354,7 +354,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="널널"
+                                android:text="@{vm.rateLabels[2][4]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -371,7 +371,7 @@
                     <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Q4. 사람(친목)을 많이 얻을 수 있나요?"
+                            android:text="@{vm.questions[3]}"
                             android:fontFamily="@font/noto_sans_kr_medium"
                             android:textSize="14sp"
                             android:textColor="@color/black_1"/>
@@ -394,7 +394,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="최악"
+                                android:text="@{vm.rateLabels[3][0]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -403,7 +403,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="안좋음"
+                                android:text="@{vm.rateLabels[3][1]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -412,7 +412,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="보통"
+                                android:text="@{vm.rateLabels[3][2]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -421,7 +421,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="좋음"
+                                android:text="@{vm.rateLabels[3][3]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
@@ -430,7 +430,7 @@
                         <TextView
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
-                                android:text="매우 좋음"
+                                android:text="@{vm.rateLabels[3][4]}"
                                 android:fontFamily="@font/noto_sans_kr_regular"
                                 android:textSize="8sp"
                                 android:textAlignment="center"
