--- a/app/src/main/res/layout/activity_club_review_detail.xml
+++ b/app/src/main/res/layout/activity_club_review_detail.xml
@@ -114,7 +114,7 @@
                 android:layout_marginVertical="12dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1">
                 <TextView
@@ -158,164 +158,175 @@
                         android:layout_marginTop="3dp"/>
 
             </androidx.constraintlayout.widget.ConstraintLayout>
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:layout_weight="1"
-                    android:gravity="center">
-                <LinearLayout
-                        android:layout_width="36dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="전문성"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="@color/black_1"/>
+<!--                <LinearLayout-->
+<!--                        android:layout_width="36dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="vertical"-->
+<!--                        android:gravity="center">-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="전문성"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="@color/black_1"/>-->
 
-                    <TextView
-                            detailReviewGrade="@{vm.reviewDetail.aveScore1}"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/noto_sans_kr_medium"
-                            android:textColor="#444444"
-                            android:textSize="16sp"
-                            tools:text="B" />
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            tools:text="매우 높음"
-                            android:textAlignment="center"
-                            android:maxLines="1"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="#aaaaaa"
-                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore1}"
-                            app:detailReviewGradeCategory="@{0}"/>
-                </LinearLayout>
-                <LinearLayout
-                        android:layout_width="36dp"
+<!--                    <TextView-->
+<!--                            detailReviewGrade="@{vm.reviewDetail.aveScore1}"-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_medium"-->
+<!--                            android:textColor="#444444"-->
+<!--                            android:textSize="16sp"-->
+<!--                            tools:text="B" />-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            tools:text="매우 높음"-->
+<!--                            android:textAlignment="center"-->
+<!--                            android:maxLines="1"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="#aaaaaa"-->
+<!--                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore1}"-->
+<!--                            app:detailReviewGradeCategory="@{0}"/>-->
+<!--                </LinearLayout>-->
+<!--                <LinearLayout-->
+<!--                        android:layout_width="36dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="vertical"-->
+<!--                        android:gravity="center">-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="재미"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="@color/black_1"/>-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_medium"-->
+<!--                            android:textSize="16sp"-->
+<!--                            android:textColor="#444444"-->
+<!--                            tools:text="B"-->
+<!--                            detailReviewGrade="@{vm.reviewDetail.aveScore2}"/>-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="중간"-->
+<!--                            android:maxLines="1"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="#aaaaaa"-->
+<!--                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore2}"-->
+<!--                            app:detailReviewGradeCategory="@{1}"/>-->
+<!--                </LinearLayout>-->
+<!--                <LinearLayout-->
+<!--                        android:layout_width="36dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="vertical"-->
+<!--                        android:gravity="center">-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="강도"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="@color/black_1"/>-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_medium"-->
+<!--                            android:textSize="16sp"-->
+<!--                            android:textColor="#444444"-->
+<!--                            tools:text="B"-->
+<!--                            detailReviewGrade="@{vm.reviewDetail.aveScore3}"/>-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            tools:text="중간"-->
+<!--                            android:maxLines="1"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="#aaaaaa"-->
+<!--                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore3}"-->
+<!--                            app:detailReviewGradeCategory="@{2}"/>-->
+<!--                </LinearLayout>-->
+<!--                <LinearLayout-->
+<!--                        android:layout_width="36dp"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:orientation="vertical"-->
+<!--                        android:gravity="center">-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:text="친목"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="@color/black_1"/>-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_medium"-->
+<!--                            android:textSize="16sp"-->
+<!--                            android:textColor="#444444"-->
+<!--                            tools:text="B"-->
+<!--                            detailReviewGrade="@{vm.reviewDetail.aveScore4}"/>-->
+<!--                    <TextView-->
+<!--                            android:layout_width="wrap_content"-->
+<!--                            android:layout_height="wrap_content"-->
+<!--                            tools:text="중간"-->
+<!--                            android:maxLines="1"-->
+<!--                            android:fontFamily="@font/noto_sans_kr_regular"-->
+<!--                            android:textSize="8sp"-->
+<!--                            android:lineHeight="13sp"-->
+<!--                            android:textColor="#aaaaaa"-->
+<!--                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore4}"-->
+<!--                            app:detailReviewGradeCategory="@{3}"/>-->
+<!--                </LinearLayout>-->
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/act_club_review_detail_rv_grade"
+                        android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="재미"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="@color/black_1"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/noto_sans_kr_medium"
-                            android:textSize="16sp"
-                            android:textColor="#444444"
-                            tools:text="B"
-                            detailReviewGrade="@{vm.reviewDetail.aveScore2}"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="중간"
-                            android:maxLines="1"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="#aaaaaa"
-                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore2}"
-                            app:detailReviewGradeCategory="@{1}"/>
-                </LinearLayout>
-                <LinearLayout
-                        android:layout_width="36dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="강도"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="@color/black_1"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/noto_sans_kr_medium"
-                            android:textSize="16sp"
-                            android:textColor="#444444"
-                            tools:text="B"
-                            detailReviewGrade="@{vm.reviewDetail.aveScore3}"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            tools:text="중간"
-                            android:maxLines="1"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="#aaaaaa"
-                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore3}"
-                            app:detailReviewGradeCategory="@{2}"/>
-                </LinearLayout>
-                <LinearLayout
-                        android:layout_width="36dp"
-                        android:layout_height="wrap_content"
-                        android:orientation="vertical"
-                        android:gravity="center">
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="친목"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="@color/black_1"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/noto_sans_kr_medium"
-                            android:textSize="16sp"
-                            android:textColor="#444444"
-                            tools:text="B"
-                            detailReviewGrade="@{vm.reviewDetail.aveScore4}"/>
-                    <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            tools:text="중간"
-                            android:maxLines="1"
-                            android:fontFamily="@font/noto_sans_kr_regular"
-                            android:textSize="8sp"
-                            android:lineHeight="13sp"
-                            android:textColor="#aaaaaa"
-                            app:detailReviewGradeScore="@{vm.reviewDetail.aveScore4}"
-                            app:detailReviewGradeCategory="@{3}"/>
-                </LinearLayout>
-            </LinearLayout>
+                        android:layout_weight="1"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
         </LinearLayout>
     </LinearLayout>
-    <com.google.android.material.tabs.TabLayout
-            android:id="@+id/act_review_detail_tl"
+    <View
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            app:tabSelectedTextColor="@color/ssgsag"
-            app:tabTextColor="#bbbbbb"
-            app:tabIndicatorColor="@color/ssgsag"
-            app:tabIndicatorHeight="2dp"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            android:background="@drawable/bg_club_detail_tab"/>
-    <androidx.viewpager.widget.ViewPager
-            android:id="@+id/act_review_detail_vp"
+            android:layout_height="2dp"
+            android:background="@color/grey_4"/>
+    <FrameLayout
+            android:id="@+id/act_review_detail_fl_bottom_container"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:saveEnabled="false"/>
+            android:layout_height="match_parent"/>
+
+    <!--    <com.google.android.material.tabs.TabLayout-->
+<!--            android:id="@+id/act_review_detail_tl"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="40dp"-->
+<!--            app:tabSelectedTextColor="@color/ssgsag"-->
+<!--            app:tabTextColor="#bbbbbb"-->
+<!--            app:tabIndicatorColor="@color/ssgsag"-->
+<!--            app:tabIndicatorHeight="2dp"-->
+<!--            app:tabMode="fixed"-->
+<!--            app:tabGravity="fill"-->
+<!--            android:background="@drawable/bg_club_detail_tab"/>-->
+
+<!--    <androidx.viewpager.widget.ViewPager-->
+<!--            android:id="@+id/act_review_detail_vp"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:saveEnabled="false"/>-->
 </LinearLayout>
 </layout>
