--- a/app/src/main/res/layout/fragment_review.xml
+++ b/app/src/main/res/layout/fragment_review.xml
@@ -5,8 +5,8 @@
                 name="vm"
                 type="com.icoo.ssgsag_android.ui.main.review.ReviewViewModel" />
         <variable
-                name="reviewFragment"
-                type="com.icoo.ssgsag_android.ui.main.review.ReviewFragment" />
+                name="reviewPageFragment"
+                type="com.icoo.ssgsag_android.ui.main.review.ReviewPageFragment" />
     </data>
 
     <FrameLayout
@@ -49,7 +49,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_centerInParent="true"
-                            reviewListTitle="@{reviewFragment.reviewType}"
+                            reviewListTitle="@{reviewPageFragment.reviewType}"
                             android:textSize="16sp"
                             android:textColor="#444444"
                             android:fontFamily="@font/noto_sans_kr_bold"
